syntax = "proto3";

package pollis;

option go_package = "pollis/pkg/proto";

service PollisService {
  // Pre-Key / Identity - Server coordinates atomic pre-key consumption
  rpc RegisterPreKeys(RegisterPreKeysRequest) returns (RegisterPreKeysResponse);
  rpc GetPreKeyBundle(GetPreKeyBundleRequest) returns (GetPreKeyBundleResponse);
  rpc RotateSignedPreKey(RotateSignedPreKeyRequest) returns (RotateSignedPreKeyResponse);

  // Sender Key Distribution - Server coordinates group channel encryption
  rpc GetSenderKey(GetSenderKeyRequest) returns (GetSenderKeyResponse);
  rpc DistributeSenderKey(DistributeSenderKeyRequest) returns (DistributeSenderKeyResponse);

  // Key Exchange - Server relays encrypted key exchange messages between users
  rpc SendKeyExchange(SendKeyExchangeRequest) returns (SendKeyExchangeResponse);
  rpc GetKeyExchangeMessages(GetKeyExchangeMessagesRequest) returns (GetKeyExchangeMessagesResponse);
  rpc MarkKeyExchangeRead(MarkKeyExchangeReadRequest) returns (MarkKeyExchangeReadResponse);

  // WebRTC Signaling - Server relays signaling for voice/video
  rpc SendWebRTCSignal(SendWebRTCSignalRequest) returns (SendWebRTCSignalResponse);
  rpc GetWebRTCSignals(GetWebRTCSignalsRequest) returns (GetWebRTCSignalsResponse);

  // Key Backup - Server stores encrypted key backups for recovery
  rpc StoreKeyBackup(StoreKeyBackupRequest) returns (StoreKeyBackupResponse);
  rpc GetKeyBackup(GetKeyBackupRequest) returns (GetKeyBackupResponse);
}

// Pre-Key / Identity Messages
message RegisterPreKeysRequest {
  string user_id = 1;
  bytes identity_key = 2;            // Ed25519 public key
  bytes signed_pre_key = 3;          // X25519 public key
  bytes signed_pre_key_sig = 4;      // Ed25519 signature over signed_pre_key
  repeated bytes one_time_pre_keys = 5; // X25519 public keys
}

message RegisterPreKeysResponse {
  bool success = 1;
  string message = 2;
}

message GetPreKeyBundleRequest {
  string user_identifier = 1; // username/email/phone
}

message GetPreKeyBundleResponse {
  string user_id = 1;
  bytes identity_key = 2;       // Ed25519 public key
  bytes signed_pre_key = 3;     // X25519 public key
  bytes signed_pre_key_sig = 4; // Ed25519 signature
  bytes one_time_pre_key = 5;   // Optional X25519 public key
}

message RotateSignedPreKeyRequest {
  string user_id = 1;
  bytes signed_pre_key = 2;     // New X25519 public key
  bytes signed_pre_key_sig = 3; // Ed25519 signature
}

message RotateSignedPreKeyResponse {
  bool success = 1;
  string message = 2;
}

// Sender Key Messages
message GetSenderKeyRequest {
  string group_id = 1;
  string channel_id = 2;
}

message GetSenderKeyResponse {
  bool success = 1;
  bytes sender_key = 2;       // AES-256 key material
  int32 key_version = 3;
  int64 created_at = 4;
}

message DistributeSenderKeyRequest {
  string group_id = 1;
  string channel_id = 2;
  bytes sender_key = 3;
  int32 key_version = 4;
  repeated string recipient_identifiers = 5; // usernames/emails/phones
}

message DistributeSenderKeyResponse {
  bool success = 1;
  string message = 2;
}

// Key Exchange Messages
message SendKeyExchangeRequest {
  string from_user_id = 1;
  string to_user_identifier = 2;
  string message_type = 3;  // 'prekey_bundle', 'key_exchange', etc.
  bytes encrypted_data = 4;
  int64 expires_in_seconds = 5;
}

message SendKeyExchangeResponse {
  bool success = 1;
  string message_id = 2;
  string message = 3;
}

message GetKeyExchangeMessagesRequest {
  string user_identifier = 1;
}

message GetKeyExchangeMessagesResponse {
  repeated KeyExchangeMessage messages = 1;
}

message KeyExchangeMessage {
  string message_id = 1;
  string from_user_id = 2;
  string message_type = 3;
  bytes encrypted_data = 4;
  int64 created_at = 5;
}

message MarkKeyExchangeReadRequest {
  repeated string message_ids = 1;
}

message MarkKeyExchangeReadResponse {
  bool success = 1;
}

// WebRTC Signaling Messages
message SendWebRTCSignalRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  string signal_type = 3;  // 'offer', 'answer', 'ice_candidate'
  string signal_data = 4;  // JSON string
  int64 expires_in_seconds = 5;
}

message SendWebRTCSignalResponse {
  bool success = 1;
  string signal_id = 2;
}

message GetWebRTCSignalsRequest {
  string user_id = 1;
}

message GetWebRTCSignalsResponse {
  repeated WebRTCSignal signals = 1;
}

message WebRTCSignal {
  string signal_id = 1;
  string from_user_id = 2;
  string signal_type = 3;
  string signal_data = 4;
  int64 created_at = 5;
}

// Key Backup Messages (for recovery with Clerk)
message StoreKeyBackupRequest {
  string user_id = 1;
  bytes encrypted_key = 2;  // Encrypted with Clerk token
}

message StoreKeyBackupResponse {
  bool success = 1;
  string message = 2;
}

message GetKeyBackupRequest {
  string user_id = 1;
}

message GetKeyBackupResponse {
  bytes encrypted_key = 1;
}

